[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RSUU <rsuuyu@gmail.com>"]
description = ""
homepage = ""
repository = "https://github.com/rsuu/bimg"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = []
categories = []
exclude = ["examples/", ".gitignore", ".github/","tests/"]

[workspace.dependencies]
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-postgres = "0.7.8"
rustls = { version = "0.21.5", default-features = false }
salvo = "0.49.1"
serde = { version = "1.0.178", features = ["serde_derive", "derive"] }
ascii = "1.1.0"
anyhow = "1.0.72"
log = "0.4.19"
